--- a/Practical Assignment/Practical Assignment.csproj
+++ b/Practical Assignment/Practical Assignment.csproj
@@ -69,9 +69,7 @@
   <ItemGroup>
     <Content Include="AboutUs.aspx" />
     <Content Include="App_Data\ArtGallery.mdf" />
-    <Content Include="App_Data\ArtGallery_log.ldf">
-      <DependentUpon>ArtGallery.mdf</DependentUpon>
-    </Content>
+    <Content Include="App_Data\ArtGallery_log.ldf" />
     <Content Include="Gallery.aspx" />
     <Content Include="HomePage.aspx" />
     <Content Include="MasterPage.css" />
