--- a/Practical Assignment/Practical Assignment.csproj
+++ b/Practical Assignment/Practical Assignment.csproj
@@ -77,6 +77,7 @@
     <Content Include="CustomerArtManagement.aspx" />
     <Content Include="EditDrawingArtist.aspx" />
     <Content Include="EditProfile.aspx" />
+    <Content Include="EditProfilePicture.aspx" />
     <Content Include="ForgetPassword.aspx" />
     <Content Include="Gallery.aspx" />
     <Content Include="GalleryArtist.aspx" />
@@ -85,6 +86,7 @@
     <Content Include="OrderHistory.aspx" />
     <Content Include="OrderHistoryDetails.aspx" />
     <Content Include="Payment.aspx" />
+    <Content Include="Sample Images\baseline_person_black_48dp.png" />
     <Content Include="Testing.aspx" />
     <Content Include="Wishlist.aspx" />
   </ItemGroup>
@@ -130,6 +132,13 @@
     </Compile>
     <Compile Include="EditProfile.aspx.designer.cs">
       <DependentUpon>EditProfile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EditProfilePicture.aspx.cs">
+      <DependentUpon>EditProfilePicture.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EditProfilePicture.aspx.designer.cs">
+      <DependentUpon>EditProfilePicture.aspx</DependentUpon>
     </Compile>
     <Compile Include="ForgetPassword.aspx.cs">
       <DependentUpon>ForgetPassword.aspx</DependentUpon>
@@ -257,7 +266,9 @@
     </None>
     <Content Include="Web.sitemap" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ProfilePic\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
