--- a/Practical Assignment/Web.config
+++ b/Practical Assignment/Web.config
@@ -11,7 +11,7 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <httpRuntime targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.7.2" executionTimeout="5000" />
   </system.web>
   <system.codedom>
     <compilers>
@@ -27,4 +27,5 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 
+  
 </configuration>
