--- a/Practical Assignment/Web.config
+++ b/Practical Assignment/Web.config
@@ -10,8 +10,8 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2"/>
-    <httpRuntime targetFramework="4.7.2" executionTimeout="5000" />
+    <compilation debug="true" targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2"  maxRequestLength="1048576" executionTimeout="3600" />
   </system.web>
   <system.codedom>
     <compilers>
